--- a/tutorial0/checkpoint0.ipynb
+++ b/tutorial0/checkpoint0.ipynb
@@ -1,6 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "779d96b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 5, 6]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get a list containing the last 3 elements of a\n",
+    "a[-3:]\n",
+    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to do that in Python"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "cf0af35b",
    "metadata": {
@@ -37,41 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "779d96b1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[4, 5, 6]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get a list containing the last 3 elements of a\n",
-    "a[-3:]\n",
-    "# Yes, you can just type out [4, 5, 6] but we really want to see you demonstrate you know how to do that in Python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "b6a54def",
    "metadata": {},
    "outputs": [],
    "source": [
     "# create a list of numbers from 1 to 100\n",
-    "b = list(range(0,101))"
+    "b = list(range(1,101))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "487873ac",
    "metadata": {},
    "outputs": [
@@ -79,36 +79,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 2 4 6 8 10 12 14 16 18 20 22 24 26 28 30 32 34 36 38 40 42 44 46 48 50 52 54 56 58 60 62 64 66 68 70 72 74 76 78 80 82 84 86 88 90 92 94 96 98 "
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [21], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# now get a list with only the even numbers between 1 and 100\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(b)):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mnums\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      4\u001b[0m         \u001b[38;5;28mprint\u001b[39m(i, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49, 51, 53, 55, 57, 59, 61, 63, 65, 67, 69, 71, 73, 75, 77, 79, 81, 83, 85, 87, 89, 91, 93, 95, 97, 99]\n"
      ]
     }
    ],
    "source": [
     "# now get a list with only the even numbers between 1 and 100\n",
-    "\n",
-    "# you may or may not make use of the list you made in the last cell"
+    "# you may or may not make use of the list you made in the last cell\n",
+    "c = []\n",
+    "for i in range(len(b)):\n",
+    "    if b[i] % 2 == 0:\n",
+    "        c.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "3d4bb5dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# write a function that takes two numbers as arguments\n",
-    "# and returns the first number divided by the second"
+    "# and returns the first number divided by the second\n",
+    "\n",
+    "def divide(a, b):\n",
+    "    return (a / b)\n",
+    "\n",
+    "divide(4, 2)"
    ]
   },
   {
@@ -119,7 +127,9 @@
    "outputs": [],
    "source": [
     "# write a function that takes a string as input\n",
-    "# and return that string in all caps"
+    "# and return that string in all caps\n",
+    "\n",
+    "def capchange"
    ]
   },
   {
